# Programma-ToDoList-LAB-di-prog-ver-1.0

./: CMakeLists.txt  Category.h  Item.h  ToDoList.h  main.cpp
